--- a/configs/Base-Bank-RCNN-FPN.yaml
+++ b/configs/Base-Bank-RCNN-FPN.yaml
@@ -20,6 +20,7 @@ MODEL:
     # Detectron1 uses 2000 proposals per-batch,
     # (See "modeling/rpn/rpn_outputs.py" for details of this legacy issue)
     # which is approximately 1000 proposals per-image since the default batch size for FPN is 2.
+    HEAD_NAME: "BankRPNHead"
     POST_NMS_TOPK_TRAIN: 1000
     POST_NMS_TOPK_TEST: 1000
   ROI_HEADS:
